# insighthub

./: .env.example  .env.test  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TESTING.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.elk.yml  docker-compose.prod.yml  docker-compose.workers.yml  docker-compose.yml  install-python-workspace.sh  package.json  pyproject.toml  task-check.txt  todo.md
.docker/: worker.Dockerfile.template
.github/workflows/: ci.yml  cli-ci.yml  client-ci.yml  ragconfig-dedup-ci.yml  server-ci.yml  shared-python-ci.yml  shared-typescript-ci.yml  todo-to-issue.yml  worker-chat-ci.yml  (+17 more)
docs/: 12factor.md  DOCKER_SETUP.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PHASE2_STATUS.md  PROJECT_STATE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_SUCCESS.md  REFACTORING_SUMMARY.md  STATUS_TRACKING.md  STRUCTURE.md  TESTING_PHILOSOPHY.md  architecture.md  changelog.md  client-user-flows.md  contributing.md  docker.md  github-actions.md  graph-rag-implementation.md  hybrid-rag-implementation.md  idea.md  implementation-status.md  project-structure.md  rag-system-documentation.md  streaming.md  taskfile-setup.md  testing.md  testing_contracts.md
infra/: README.md  Taskfile.yml
migrations/: 001_initial_schema.sql  002_add_rag_type_to_default_config.sql  003_remove_user_id_from_workspaces.sql  README.md  migrate.sh
scripts/: patch_server_config_rm.py  refactor_duplicates.sh
src/: cache_keys.py  cli.py  config.py  context.py  main.py
tests/: README.md  conftest.py
(+383 files in other folders)
